--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.2.3",
     "@mui/styles": "^5.2.3",
     "dotenv": "^10.0.0",
+    "firebase": "^9.6.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
